maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:17: error: type mismatch;
 found   : Unit
 required: Int
    return (x=x-1)
             ^